# transcript-api

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  deploy-simple.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  example.py  nginx.conf  pyproject.toml  requirements-prod.txt  requirements.txt  requirements_local.txt
.github/workflows/: deploy-no-hub.yml  deploy.yml
app/: __init__.py  main.py
app/api/: api.py
app/api/endpoints/: __init__.py  health.py  transcripts.py  youtube.py
app/core/: config.py  deps.py  whisper.py
app/models/: __init__.py  api.py
app/providers/: __init__.py  base.py  tiktok.py  youtube.py
app/tests/: __init__.py  test_api.py  test_youtube.py
